Updated publications page to right align the little info box on mobile. Also shrank the back to top button on mobile as per discussion in issue #42

--- a/website/static/website/css/backtop.css
+++ b/website/static/website/css/backtop.css
@@ -5,43 +5,87 @@
     left: 25px;
 }
 
-#back-top a {
-    width: 75px;
-    display: block;
-    text-align: center;
-    font: 11px/100% Arial, Helvetica, sans-serif;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: #bbb;
+@media (max-width: 768px){
+    #back-top a {
+	width: 25px;
+	display: block;
+	text-align: center;
+	font: 5px/100% Arial, Helvetica, sans-serif;
+	text-transform: uppercase;
+	text-decoration: none;
+	color: #bbb;
+	
+	/* transition */
+	-webkit-transition: 1s;
+	-moz-transition: 1s;
+	transition: 1s;
+    }
 
-    /* transition */
-    -webkit-transition: 1s;
-    -moz-transition: 1s;
-    transition: 1s;
+    #back-top span {
+	width: 25px;
+	height: 25px;
+	display: block;
+	margin-bottom: 7px;
+	background: #ddd url(../img/up-arrow.png) no-repeat center center;
+	background-size: 100% 100%;
+	
+	/* rounded corners */
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	
+	/* transition */
+	-webkit-transition: 1s;
+	-moz-transition: 1s;
+	transition: 1s;
+    }
+
 }
+
+@media (min-width: 769px){
+    #back-top a {
+	width: 75px;
+	display: block;
+	text-align: center;
+	font: 11px/100% Arial, Helvetica, sans-serif;
+	text-transform: uppercase;
+	text-decoration: none;
+	color: #bbb;
+	
+	/* transition */
+	-webkit-transition: 1s;
+	-moz-transition: 1s;
+	transition: 1s;
+    }
+
+    #back-top span {
+	width: 75px;
+	height: 75px;
+	display: block;
+	margin-bottom: 7px;
+	background: #ddd url(../img/up-arrow.png) no-repeat center center;
+	
+	/* rounded corners */
+	-webkit-border-radius: 15px;
+	-moz-border-radius: 15px;
+	border-radius: 15px;
+	
+	/* transition */
+	-webkit-transition: 1s;
+	-moz-transition: 1s;
+	transition: 1s;
+    }
+    
+}
+
+
 
 #back-top a:hover {
     color: #000;
 }
 
 /* arrow icon (span tag) */
-#back-top span {
-    width: 75px;
-    height: 75px;
-    display: block;
-    margin-bottom: 7px;
-    background: #ddd url(../img/up-arrow.png) no-repeat center center;
 
-    /* rounded corners */
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    border-radius: 15px;
-
-    /* transition */
-    -webkit-transition: 1s;
-    -moz-transition: 1s;
-    transition: 1s;
-}
 
 #back-top a:hover span {
     background-color: #777;
