--- a/website/static/website/css/publications.css
+++ b/website/static/website/css/publications.css
@@ -61,7 +61,21 @@
 	padding-right:10px;
 }
 
-.publication-id {
+
+@media (max-width: 768px){
+   .publication-id {
+	font-size: 10px;
+	color: #7F7F7F;
+	min-width: 40px;
+	display: table-cell;
+	vertical-align: top;
+	text-align: left;
+	padding-right: 10px;
+   } 
+}
+
+@media (min-width: 769px){
+    .publication-id {
 	font-size: 10px;
 	color: #7F7F7F;
 	min-width: 40px;
@@ -69,7 +83,10 @@
 	vertical-align: top;
 	text-align: right;
 	padding-right: 10px;
+    }
 }
+
+
 
 .publication-title {
 	font-family: adelle-regular;
